--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,97 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*, *:after, *:before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-input {
+  margin: 20px auto;
+  width: 40%;
+  height: 50px;
+  padding: 20px;
+  border-radius: 2em;
+  border: 1px solid #BDBDBD;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.search-input:focus {
+  border: 2px solid #27AAE1;
+  outline: none;
 }
 
-.card {
-  padding: 2em;
+.search-input:focus::placeholder {
+  color: #27AAE1;
 }
 
-.read-the-docs {
-  color: #888;
+.tools-container {
+  display: flex; 
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  gap: 50px;
+  margin: auto;
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 20px auto;
+  max-width: 230px;
+  padding: 20px;
+  background-color: #EBEBEB;
+  border-radius: 20px;
+}
+
+.pagination-container li {
+  margin: 0 2px;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.pagination-container li:hover {
+  background-color: #27AAE1;
+  color: #FFF;
+}
+
+.pagination-container li.active {
+  background-color: #27AAE1;
+  color: #FFF;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 300px;
+  height: 300px;
+  background-color: #EBEBEB;
+  border-radius: 1.5em;
+  border: 1px solid #BDBDBD;
+}
+
+.card-container:hover {
+  background-color: #27AAE1;
+  color: #FFF;
+  cursor: pointer;
+}
+
+.card-container img {
+  width: 100px;
+  height: 100px;
+}
+
+.card-container p {
+  font-size: large;
+  font-weight: 700;
 }
