--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,68 @@
   font-size: large;
   font-weight: 700;
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background: #fff;
+  padding: 50px;
+  border-radius: 5px;
+  max-width: 600px;
+  text-align: center;
+  width: 100%;
+  background-color: #EBEBEB;
+}
+
+.popup-content button {
+  margin-top: 50px;
+}
+
+.popup-first-frame {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 50px;
+}
+
+.popup-first-frame img {
+  width: 200px;
+  height: 200px;
+}
+
+.popup-infos-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.popup-title-text {
+  color: #27AAE1;
+  font-size: 32px;
+}
+
+.popup-title-link {
+  color: #FFF;
+  width: 100px;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: #27AAE1;
+  border-radius: 2em;
+}
+
+.popup-title-link:hover {
+  background-color: #0090CE;
+}
